| Summary: | ASTERISK-27389: Optional API modules should not allow unload. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2017-11-01 19:40:49 | Date Closed: | 2017-11-06 09:42:18.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Functions/func_periodic_hook Resources/res_agi Resources/res_http_websocket Resources/res_monitor Resources/res_smdi Resources/res_statsd |
| Versions: | 13.18.0 GIT 15.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Nothing stops an optional API provider from unloading while another module is using it. Optional API provider modules should not be allowed to unload. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-11-01 19:40:50.027-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-11-06 09:42:18.675-0600 Change 6959 merged by Jenkins2: Prevent unload of modules which implement an Optional API. [https://gerrit.asterisk.org/6959|https://gerrit.asterisk.org/6959] By: Friendly Automation (friendly-automation) 2017-11-06 10:01:37.807-0600 Change 6958 merged by Jenkins2: Prevent unload of modules which implement an Optional API. [https://gerrit.asterisk.org/6958|https://gerrit.asterisk.org/6958] By: Friendly Automation (friendly-automation) 2017-11-06 10:12:40.922-0600 Change 6957 merged by Joshua Colp: Prevent unload of modules which implement an Optional API. [https://gerrit.asterisk.org/6957|https://gerrit.asterisk.org/6957] | ||