funcs/func_periodic_hook.c
@@ -490,6 +490,11 @@ static int load_module(void)
 
 	res = ast_custom_function_register_escalating(&hook_function, AST_CFE_BOTH);
 
+	if (!res) {
+		/* For Optional API. */
+		ast_module_shutdown_ref(ast_module_info->self);
+	}
+
 	return res ? AST_MODULE_LOAD_DECLINE : AST_MODULE_LOAD_SUCCESS;
 }
 
